# armbankrate

./: README.md
cli/: Cargo.toml
cli/src/: main.rs  table_builder.rs
parser/: Cargo.toml
parser/src/: ardshinbank.rs  conversebank.rs  error.rs  evocabank.rs  idbank.rs  inecobank.rs  lib.rs  sort.rs  unibank.rs
