[package]
name = "armbankrate-parser"
version = "0.1.0"
authors = ["David Eritsyan <dav.eritsyan@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Library that parses Armenian bank rates"
keywords = ["banks", "parser", "Armenia"]
categories = ["library"]
homepage = "https://github.com/Davidoc26/armbankrate/tree/main/parser"
repository = "https://github.com/Davidoc26/armbankrate/tree/main/parser"

[dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
scraper = "0.13.0"
async-trait = "0.1.56"
regex = "1.6.0"
enum_dispatch = "0.3.8"
thiserror = "1.0.32"
once_cell = "1.13.0"
futures = "0.3.21"